--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@ function initialize(modi) {
 		
 		setTimeout(function() {
 			initialize(results)
-		}, (100 * 9) );
+		}, (100 * 10 ) );
 		
     });
 }
@@ -183,14 +183,14 @@ $('#selector').delay(1).hide('fast');
 
 
 // Set population limit of aquarium to 10
-const popLimit = 10;
+const popLimit = 2;
 // Start off with 0 fish
 let fish = 0;
 // Initiate while loop to run until fish reaches population limit
 while (fish < popLimit) {
     // add one fish for each iteration
     fish++;
-    console.log("There's room for " + (popLimit - fish) + " more fish.");
+    //console.log("There's room for " + (popLimit - fish) + " more fish.");
 }
 
 
