--- a/public/index.html
+++ b/public/index.html
@@ -303,6 +303,7 @@ start();
 
 
 #customers {
+	font-size:90%;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
@@ -328,21 +329,21 @@ start();
 
 </head>
 <body>
-
+<table border='1'>
+<tr>
+<td> <div id='body2'></div>
+<td> <output id="display-area">00:00:00.000</output>	
+<td>
 <ul>
 	<li><a href="index.html">1</a>
-	<li><a href="index2.html">2</a>
-	
+	<li><a href="index2.html">2</a>	
 	</li>
 </ul>
 
+</tr>
+</table>
 
 <div id='selector' style="display:none;position:fixed;left:100px;top:160px;" class="loader"></div>
-
-<div>       <p><output id="display-area">00:00:00.000</output></p>
-        </div>
-		
-		<div id='body2'></div><br>
 
 <table id="customers"><thead></thead><tbody></tbody></table>
 		
