--- a/public/index3.html
+++ b/public/index3.html
@@ -129,6 +129,12 @@ for (i = 0; i < count2; i++) {
 		else if(k=='inputDtUnix'){
 			tbl_row += "<td>"+ (getHour2(v)) +"</td>";
 		}
+		else if(k=='inputDtUnix'  ){
+			tbl_row += "<td>"+ (getHour2(v)) +"</td>";
+		}
+		else if( k=='buyDtUnix' ){
+			tbl_row += "<td>"+ (getHour2(v)) +"</td>";
+		}
 		else{
 		tbl_row += "<td>"+v+"</td>";}
 	});
