--- a/public/index3.html
+++ b/public/index3.html
@@ -19,10 +19,12 @@ $(document).ready(function(){
 var jsonDb = [
   "db2.json", 
   "dbBuy2.json",
+  "dbAppr.json" ,
   "dbSold.json",
 ];
 let posts2 = [
   "tokens", 
+  "posts",
   "posts",
   "posts",
 ];
